--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -52,7 +52,7 @@
   </style>
 </head>
 <body>
-  <h1>環境センサーデータ一覧</h1>
+  <h1>環境センサーデータ名覧 | Environment Sensor Data Name List</h1>
   <div class="table-wrapper">
     <table id="data-table"></table>
   </div>
