--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -21,19 +21,18 @@
     }
 
     table {
-      width: auto;
+      width: 100%;
       border-collapse: collapse;
-      min-width: 1200px; /* 表全体の最小幅を広げる */
       background-color: #fff;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      table-layout: auto;
+      table-layout: auto; /* 自動列幅 */
     }
 
     th, td {
       border: 1px solid #ccc;
-      padding: 8px 16px;
+      padding: 6px 12px;
       text-align: left;
-      white-space: nowrap; /* 改行させず1行で表示 */
+      white-space: nowrap; /* 改行させない */
     }
 
     th {
