--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -15,6 +15,25 @@
       font-size: 1.6rem;
     }
 
+    .download-button {
+      display: flex;
+      justify-content: center;
+      margin: 1em 0;
+    }
+
+    .download-button a {
+      background-color: #007acc;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .download-button a:hover {
+      background-color: #005fa3;
+    }
+
     .table-wrapper {
       overflow-x: auto;
       margin-top: 1em;
@@ -25,14 +44,14 @@
       border-collapse: collapse;
       background-color: #fff;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      table-layout: auto; /* 自動列幅 */
+      table-layout: auto;
     }
 
     th, td {
       border: 1px solid #ccc;
       padding: 6px 12px;
       text-align: left;
-      white-space: nowrap; /* 改行させない */
+      white-space: nowrap;
     }
 
     th {
@@ -50,13 +69,35 @@
     tr:hover {
       background-color: #e6f7ff;
     }
+
+    .copied-message {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #333;
+      color: #fff;
+      padding: 8px 16px;
+      border-radius: 4px;
+      display: none;
+      z-index: 1000;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
   <h1>環境センサーデータ名一覧 | Environment Sensor Data Name List</h1>
+
+  <!-- ✅ ダウンロードボタン -->
+  <div class="download-button">
+    <a href="environment_sensor_data_list.csv" download>CSVファイルをダウンロード</a>
+  </div>
+
   <div class="table-wrapper">
     <table id="data-table"></table>
   </div>
+
+  <div id="copied-message" class="copied-message">コピーしました</div>
 
   <!-- PapaParse CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
@@ -75,7 +116,6 @@
         const headers = parsed.meta.fields;
         const rawData = parsed.data;
 
-        // 空行や全カラム空の行を除外
         const data = rawData.filter(row =>
           headers.some(header => (row[header] || '').trim() !== '')
         );
@@ -86,7 +126,6 @@
           return;
         }
 
-        // ヘッダー描画
         const thead = table.createTHead();
         const headerRow = thead.insertRow();
         headers.forEach(header => {
@@ -95,13 +134,25 @@
           headerRow.appendChild(th);
         });
 
-        // 本文描画
         const tbody = table.createTBody();
         data.forEach(row => {
           const tr = tbody.insertRow();
-          headers.forEach(header => {
+          headers.forEach((header, index) => {
             const td = tr.insertCell();
             td.textContent = row[header] || '';
+
+            // ✅ 1列目（data_name）にクリックコピー機能を付加
+            if (index === 0) {
+              td.style.cursor = "pointer";
+              td.title = "クリックしてコピー";
+              td.addEventListener('click', () => {
+                navigator.clipboard.writeText(td.textContent).then(() => {
+                  const msg = document.getElementById('copied-message');
+                  msg.style.display = 'block';
+                  setTimeout(() => msg.style.display = 'none', 1500);
+                });
+              });
+            }
           });
         });
       })
