--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -51,14 +51,8 @@
       border: 1px solid #ccc;
       padding: 6px 12px;
       text-align: left;
-      white-space: nowrap;
-    }
-
-    /* ✅ Data Name列の幅を制限 */
-    td.data-name-cell {
-      min-width: 100px;
-      max-width: 160px;
-      width: 140px;
+      white-space: normal;         /* ✅ 改行許可 */
+      word-break: break-word;      /* ✅ 単語の途中でも折り返し */
     }
 
     th {
@@ -95,7 +89,6 @@
 <body>
   <h1>環境センサーデータ名一覧 | Environment Sensor Data Name List</h1>
 
-  <!-- ✅ ダウンロードボタン -->
   <div class="download-button">
     <a href="environment_sensor_data_list.csv" download>CSVファイルをダウンロード</a>
   </div>
@@ -123,7 +116,6 @@
         const headers = parsed.meta.fields;
         const rawData = parsed.data;
 
-        // 空行や全カラム空の行を除外
         const data = rawData.filter(row =>
           headers.some(header => (row[header] || '').trim() !== '')
         );
@@ -134,7 +126,6 @@
           return;
         }
 
-        // ヘッダー描画
         const thead = table.createTHead();
         const headerRow = thead.insertRow();
         headers.forEach(header => {
@@ -143,7 +134,6 @@
           headerRow.appendChild(th);
         });
 
-        // 本文描画
         const tbody = table.createTBody();
         data.forEach(row => {
           const tr = tbody.insertRow();
@@ -151,9 +141,8 @@
             const td = tr.insertCell();
             td.textContent = row[header] || '';
 
-            // ✅ 1列目（Data Name）だけスタイル＆コピー機能追加
+            // ✅ Data Name列（1列目）のコピー機能は維持
             if (index === 0) {
-              td.classList.add('data-name-cell');
               td.style.cursor = "pointer";
               td.title = "クリックしてコピー";
               td.addEventListener('click', () => {
