--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -129,7 +129,7 @@
   <div class="header-container">
     <h1>環境センサーデータ名一覧 | Environment Sensor Data Name List</h1>
     <div class="download-button">
-      <a href="environment_sensor_data_list.csv" download>CSVファイルをダウンロード</a>
+      <a href="environment_sensor_data_list.csv" download>CSV Download</a>
     </div>
   </div>
 
