--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -81,16 +81,16 @@
       background-color: #e6f7ff;
     }
 
-    /* Data Name のセルを目立たせる */
+    /* Data Name のセルを目立たせる - 青色の背景 */
     td.data-name-cell {
       cursor: pointer;
-      color: #0066cc;
-      background-color: #f0f7ff;
+      color: #ffffff;
+      background-color: #007acc;
       transition: background-color 0.2s;
     }
 
     td.data-name-cell:hover {
-      background-color: #d0e5ff;
+      background-color: #0095ff;
       text-decoration: underline;
     }
 
