--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -60,7 +60,7 @@
     }
 
     th.data-name-header {
-      background-color: #007acc !important;
+      background-color: #179C9C !important;
     }
 
     td {
