--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -23,16 +23,19 @@
     }
 
     .download-button a {
-      background-color: #007acc;
-      color: white;
+      background-color: white;
+      color: #179C9C;
       padding: 10px 20px;
       border-radius: 6px;
+      border: 2px solid #179C9C;
       text-decoration: none;
       font-weight: bold;
+      transition: background-color 0.2s, color 0.2s;
     }
 
     .download-button a:hover {
-      background-color: #005fa3;
+      background-color: #179C9C;
+      color: white;
     }
 
     .table-wrapper {
