--- a/open_data_format/environment_sensor_data/index.html
+++ b/open_data_format/environment_sensor_data/index.html
@@ -97,7 +97,7 @@
       bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: #007acc;
+      background: #179C9C;  /* ← ここを変更 */
       color: #fff;
       padding: 8px 16px;
       border-radius: 4px;
