--- a/open_data/lorawan_device_ttn/index.html
+++ b/open_data/lorawan_device_ttn/index.html
@@ -24,7 +24,7 @@
             text-align: left;
         }
         th {
-            background-color: #4CAF50;
+            background-color: #179C9C;
             color: white;
             font-weight: bold;
         }
@@ -33,7 +33,7 @@
         }
         h2 {
             color: #333;
-            border-bottom: 2px solid #4CAF50;
+            border-bottom: 2px solid #179C9C;
             padding-bottom: 5px;
             margin-top: 30px;
         }
@@ -84,7 +84,7 @@
                         const tbody = document.createElement('tbody');
 
                         // テーブルヘッダーの作成
-                        let headerRow = '<tr><th>データ名</th><th>データ識別子</th><th>単位</th></tr>';
+                        let headerRow = '<tr><th>データ名(JP)</th><th>data_name</th><th>unit</th></tr>';
                         thead.innerHTML = headerRow;
                         table.appendChild(thead);
 
