--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <redoc spec-url='./webapi.yaml'></redoc>
-    <!-- 最新の安定版に変更 -->
-    <script src="https://cdn.jsdelivr.net/npm/redoc@latest/bundles/redoc.standalone.js"></script>
+    <!-- ローカルにスクリプトを保存 -->
+    <script src="./js/redoc.standalone.js"></script>
   </body>
 </html>
